--- a/.azure-pipelines/weekly-generation.yml
+++ b/.azure-pipelines/weekly-generation.yml
@@ -96,6 +96,7 @@ jobs:
       - task: PowerShell@2
         name: "FindDuplicateCommands"
         displayName: "Find Duplicate Commands Across Modules"
+        enabled: false
         inputs:
           targetType: inline
           script: |
