--- a/.azure-pipelines/weekly-generation.yml
+++ b/.azure-pipelines/weekly-generation.yml
@@ -166,6 +166,7 @@ jobs:
         inputs:
           targetType: inline
           script: |
+            gh auth login
             git pull origin $(GenerationBranch)
             git merge $(GenerationBranch) -s ours
             git push "https://$(GITHUB_TOKEN)@github.com/microsoftgraph/msgraph-sdk-powershell.git"
